# hatch-project-name

./: .gitignore  .pre-commit-config.yaml  HISTORY.md  LICENSE.txt  README.md  hatch.toml  pyproject.toml  ruff_defaults.toml
.github/workflows/: build.yml  test.yml
hatch_project_name/: __about__.py  hooks.py  plugin.py
tests/: conftest.py  test_build.py  test_build_config.py  utils.py
