[build-system]
requires = [
    "hatchling>=1.1.0",
]
build-backend = "hatchling.build"

[project]
name = "hatch-project-name"
dynamic = [
    "version",
]
description = "Hatch build hook plugin that writes the project name to a file"
readme = "README.md"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
keywords = [
    "git",
    "hatch",
    "mercurial",
    "plugin",
]
authors = [
    { name = "Valentin Oliver Melberg Loftsson", email = "valentin.loftsson@gmail.com" },
]
classifiers = [
    "Framework :: Hatch",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "hatchling>=1.1.0",
]

[project.urls]
History = "https://github.com/valentinoli/hatch-project-name/blob/main/HISTORY.md"
Issues = "https://github.com/valentinoli/hatch-project-name/issues"
Source = "https://github.com/valentinoli/hatch-project-name"

[project.entry-points.hatch]
project-name = "hatch_project_name.hooks"

[tool.hatch.version]
path = "hatch_project_name/__about__.py"

[tool.hatch.build.targets.sdist]
packages = [
    "hatch_project_name",
]

[tool.hatch.build.targets.wheel]
packages = [
    "hatch_project_name",
]

################################################################################
# Ruff
################################################################################

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",
    "PLR2004",
]

[tool.ruff.lint.isort]
known-first-party = [
    "hatch_project_name",
]

################################################################################
# MyPy
################################################################################

[tool.mypy]

################################################################################
# Coverage.py
################################################################################

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

################################################################################
# Pytest
################################################################################

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
python_files = ["test_*.py"]
